# learnloop

./: .breakpoints  .replit  README.md  artigos.py  pyproject.toml  requirements.txt  routes.py  users.py
.github/workflows/: main_learnloop.yml
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
app/: __init__.py  models (2).py  models.py
app/routes/: __init__.py  artigos (2).py  artigos.py  duvidas.py  feciba.py  groups.py  plan.py  users.py
app/static/: manifest.json  sw.js
app/static/css/: base.css  default.css
app/static/feciba/: A FALTA DE DEBATE SOBRE A LEGALIZAÇÃO DAS DROGAS.docx  Inclusão Alimentar no Colégio Estadual Democrático Professor Rômulo Galvão.docx  LEARN LOOP - LAÇOS DE APRENDIZAGEM (1).docx
app/static/js/: create-artigo.js  duvidas.js  plan.js  quiz.js  redacao.js
app/templates/: admin.html  base.html  create-artigo.html  duvidas.html  feciba-add.html  feciba-mostra.html  feed.html  group-page.html  groups-list.html  guia.html  index.html  login.html  plan.html  post.html  privacidade.html  projeto.html  quiz.html  signup.html  sitemap.xml  termos.html  treino-redacao.html
instance/: app.db  data-2024-learnloop-2 (4).db  data-2024-learnloop-2.db  data-2024-learnloop.db  data-learnloop-feciba.db  data-learnloop-fecibo.db  data-learnloop.db  myapp2.db
(+1 files in other folders)
